--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+.body {
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(69, 86, 102) 0%,
+    rgb(34, 34, 34) 90%
+  );
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-weight: 300;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  font-weight: 300;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+i {
+  color: #fff;
+  font-size: 90px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  color: #fff;
+  background: rgb(42, 52, 62);
+  border-radius: 4px;
+  border: 2px solid rgb(29, 41, 53);
+  margin-top: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.degrees {
+  text-decoration: none;
+  color: #fff;
+  cursor: default;
+}
+
+.location {
+  font-weight: 500;
+  font-size: 35px;
+  margin-top: 0 auto;
+}
+
+.situation {
+  font-size: 12px;
+}
+
+.tomorrow,
+.day {
+  transition: all 200ms ease-in-out;
+}
+
+.tomorrow:hover,
+.day:hover {
+  background: rgba(34, 34, 34, 0.247) 90%;
+  cursor: pointer;
+}
+
+.tomorrow-degree {
+  font-size: 15px;
+}
+.icon {
+  font-size: 28px;
 }
